HelloUltraviolet/Fixtures/RejectedSource/Procedures/MissingReturnType/Expected.uv
//! Expected diagnostic metadata for the MissingReturnType rejected-source specimen.

expectedDiagnostic("", "rule.15.WF-ProcedureDecl-MissingReturnType")
